better layout, started adding entries

--- a/index.html
+++ b/index.html
@@ -18,14 +18,8 @@
                     <div class="card">
                         <h3>Hétfő</h3>
                         <div class="orak">
-                            <div class="ora">1</div>
-                            <div class="ora">2</div>
-                            <div class="ora">3</div>
-                            <div class="ora">4</div>
-                            <div class="ora">5</div>
-                            <div class="ora">6</div>
-                            <div class="ora">7</div>
-                            <div class="ora">8</div>
+                            <div class="ora">11:00 - 14:00: Rókus, fekete kuka</div>
+                            <div class="ora"></div>
                         </div>
                     </div>
                     <div class="card">
