baked days to JSON

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Szemétszállítások időpontjai</h1>
             </header>
             <main>
-                <div class>
+                <div id="deck">
                     <div class="card">
                         <h3>Hétfő</h3>
                         <div class="orak">
@@ -101,6 +101,7 @@
                         }
                     }
                 </script>
+                <script src="js.js"></script>
             </footer>
         </div>
     </div>
